# lora-1000mW-module

./: .gitignore  CMakeLists.txt  README.md  prj.conf
custom_board/boards/arm/telem_module_rx/: Kconfig.board  Kconfig.defconfig  board.cmake  telem_module_rx.dts  telem_module_rx.yaml  telem_module_rx_defconfig
custom_board/boards/arm/telem_module_tx/: Kconfig.board  Kconfig.defconfig  telem_module_tx.dts
src/: main.c
